labs/networkpolicy-troubleshooting/solution/00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: np-app
  labels:
    purpose: networkpolicy-lab
    name: np-app
---
apiVersion: v1
kind: Namespace
metadata:
  name: np-monitoring
  labels:
    purpose: networkpolicy-lab
    name: np-monitoring
